src/test/NoIndexedAssignment/NoIndexedAssignment.panda
class NoIndexedAssignment1 {
}

class NoIndexedAssignment2 {
    function [](index:Int):Int {
        return index
    }
}

method main() {
    var a := NoIndexedAssignment1()
    a[5] := 8
    var b := NoIndexedAssignment2()
    b[8] := 13
}